# arkq-overlay

./: repositories.xml
app-misc/ouroboros/: Manifest  ouroboros-9999.ebuild
media-gfx/swfpack/: Manifest  swfpack-1.0.0.ebuild
media-libs/libldac/: Manifest  libldac-9999.ebuild
media-libs/libldac/files/: Makefile.am  configure.ac  libldac-debug-to-stderr.patch
media-libs/openaptx/: Manifest  openaptx-9999.ebuild
media-sound/cmusfm/: Manifest  cmusfm-9999.ebuild
media-sound/svar/: Manifest  svar-1.0.0.ebuild
profiles/: repo_name
sci-misc/smart-sweepers-qt/: Manifest  smart-sweepers-qt-2.2.0.ebuild
x11-misc/alock/: Manifest  alock-2.4.0.ebuild
x11-misc/droidmote/: Manifest  droidmote-3.0.2.ebuild
x11-misc/droidmote/files/: droidmote-conf.d  droidmote-init.d
